--- a/PizzaBuddy/Views/Base.lproj/Main.storyboard
+++ b/PizzaBuddy/Views/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kaR-7i-6LF">
-                                <rect key="frame" x="37.5" y="78" width="300.5" height="84.5"/>
+                                <rect key="frame" x="51.5" y="78" width="272.5" height="82"/>
                                 <fontDescription key="fontDescription" name="VarelaRound-Regular" family="Varela Round" pointSize="70"/>
                                 <color key="textColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -243,7 +243,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Base Fee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nni-Lo-mz1">
-                                <rect key="frame" x="16" y="71" width="131.5" height="26.5"/>
+                                <rect key="frame" x="16" y="71" width="134" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Nni-Lo-mz1" secondAttribute="height" multiplier="134:27" id="z3D-c8-EJm"/>
                                 </constraints>
@@ -252,7 +252,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Minimum Wage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nI9-7b-rzz">
-                                <rect key="frame" x="16" y="123" width="197.5" height="26"/>
+                                <rect key="frame" x="16" y="126" width="205" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="nI9-7b-rzz" secondAttribute="height" multiplier="205:27" id="5j8-Ak-yd1"/>
                                 </constraints>
@@ -261,7 +261,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$0.00" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UoH-Ez-6wO">
-                                <rect key="frame" x="155.5" y="66" width="83.5" height="40"/>
+                                <rect key="frame" x="158" y="66" width="89" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="UoH-Ez-6wO" secondAttribute="height" multiplier="27:13" id="XpX-bN-ifN"/>
                                 </constraints>
@@ -270,7 +270,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$0.00" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gM1-R6-Hi8">
-                                <rect key="frame" x="221.5" y="118" width="83.5" height="37.5"/>
+                                <rect key="frame" x="229" y="121" width="89" height="39.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gM1-R6-Hi8" secondAttribute="height" multiplier="9:4" id="HdC-Jj-0Mp"/>
                                 </constraints>
@@ -313,7 +313,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CgY-gM-chC" userLabel="popupView">
-                                <rect key="frame" x="22" y="133" width="276" height="283"/>
+                                <rect key="frame" x="49" y="182" width="276" height="283"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="50J-Mm-oU1">
@@ -333,8 +333,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="submit"/>
                                         <connections>
-                                            <action selector="submitButtonPressed:" destination="Xah-Of-Ong" eventType="touchUpInside" id="uST-jT-t1N"/>
-                                            <segue destination="49k-Hb-1YR" kind="unwind" unwindAction="unwindFromAddressView:" id="FGb-vq-ImJ"/>
+                                            <segue destination="49k-Hb-1YR" kind="unwind" unwindAction="unwindFromAddressView:" id="AxA-fg-gdl"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -377,12 +376,12 @@
                                 </constraints>
                                 <state key="normal" backgroundImage="plusAsset 18"/>
                                 <connections>
-                                    <segue destination="Xah-Of-Ong" kind="popoverPresentation" popoverAnchorView="ka2-7d-iBG" id="OGB-4U-Lpc">
+                                    <segue destination="Xah-Of-Ong" kind="popoverPresentation" popoverAnchorView="ka2-7d-iBG" id="mwM-40-bcw">
                                         <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                     </segue>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ymM-U0-m8H">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ymM-U0-m8H">
                                 <rect key="frame" x="0.0" y="54" width="375" height="613"/>
                                 <color key="backgroundColor" red="1" green="0.64313725489999995" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" red="1" green="0.64313725489999995" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
@@ -395,11 +394,11 @@
                                     <textInputTraits key="textInputTraits"/>
                                 </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DeliveryCell" id="niM-dn-DOx" userLabel="DeliveryCell">
-                                        <rect key="frame" x="0.0" y="72" width="375" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DeliveryCell" id="niM-dn-DOx" userLabel="DeliveryCell" customClass="SwipeTableViewCell" customModule="SwipeCellKit">
+                                        <rect key="frame" x="0.0" y="72" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="niM-dn-DOx" id="HrG-FK-y59">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="0.31764705879999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -447,6 +446,7 @@
                     <tabBarItem key="tabBarItem" title="Item" id="jNb-Q0-lGs"/>
                     <navigationItem key="navigationItem" id="wco-C0-rNU"/>
                     <connections>
+                        <outlet property="numberOfDeliveriesLabel" destination="PAV-VC-oxU" id="Xn7-AV-SpT"/>
                         <outlet property="tableView" destination="ymM-U0-m8H" id="E3y-L3-z0f"/>
                     </connections>
                 </viewController>
@@ -1205,10 +1205,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="f2E-gn-sHV"/>
         <segue reference="riW-pU-czO"/>
         <segue reference="KLl-71-Fbq"/>
         <segue reference="g2O-PL-iJo"/>
-        <segue reference="Blo-MY-oau"/>
+        <segue reference="GZc-El-iWY"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="EditAsset 19" width="136" height="95"/>
